0.2
2018-unreleased
---



0.1.6
2018.05.14
---
- updating some functionality for imports
- some ux fixes
- the nginx status tools now return a better json payload

0.1.5
2018.01.15
---
- split library functions into multiple files
- changed the database cleanup design to work with current pyramid and pyramid_tm
- explicit objects listed with dbSession.flush()
- updated readme
- better display info on cert/domain pages if you expire nginx
- renamed `nginx.reset_servers` to  `nginx.servers_pool`
- added `nginx.status_path`
- added support for checking nginx status
- added password support to nginx status
- allow no-verify for ssl domains on internal servers via `nginx.servers_pool_allow_invalid`
- changed ports on example ini files
- added .json exceptions for better handling by lua
- more docs on config file options
- cleaning up the admin url config file options, using reified request properties to shortcut logic


0.1.4
2016.11.29
---
-  removed the lua support into a separate project: http://github.com/aptise/peter_sslers-lua-resty , which can be installed via openresty's opm package manager.


0.1.3
---
-  replaced `datetime.datetime.now()` with `datetime.datetime.utcnow()`

0.1.2
---
-  Added `example_` prefix to .ini files


0.1.1
---
-  Working on the domain routes


0.1
---
-  Added a request param `request.api_context` and replaced passing around the raw dbSession with the context object
	At this point the context object merely contains a dbSession, timestamp, and some information about the current api transactions
	Any object that implements this interface can be used.


0.0
---
-  Initial version