@@ -20,85 +20,43 @@
         These settings can be edited with your <code>environment.ini</code> file.
     </p>
     <div class="row">
-        <div class="col-sm-6">
-
-<table class="table table-striped table-condensed">
-    <tr>
-        <th colspan="2">
-            Enabled Options
-        </th>
-    </tr>
-    % for option in ('enable_nginx', 'enable_redis', 'enable_views_admin', 'enable_views_public'):
-        <tr>
-            <td>${option}</td>
-            <td>${request.registry.settings.get(option)}</td>
-        </tr>
-    % endfor
-
-    <tr>
-        <th colspan="2">
-            Views Configuration
-        </th>
-    </tr>
-    % for option in ('enable_views_admin', 'enable_views_public', 'admin_prefix', ):
-        <tr>
-            <td>${option}</td>
-            <td>${request.registry.settings.get(option)}</td>
-        </tr>
-    % endfor
-
-
-    <tr>
-        <th colspan="2">
-            Certifcate Configuration
-        </th>
-    </tr>
-    % for option in ('certificate_authority', 'expiring_days', 'openssl_path', 'openssl_path_conf', ):
-        <tr>
-            <td>${option}</td>
-            <td>${request.registry.settings.get(option)}</td>
-        </tr>
-    % endfor
-
-    <tr>
-        <th colspan="2">
-            NGINX Configuration
-        </th>
-    </tr>
-    % for option in ('nginx.reset_path', 'nginx.servers_pool', 'nginx.servers_pool_allow_invalid', 'nginx.status_path', 'nginx.timeout', 'nginx.userpass', ):
-        <tr>
-            <td>${option}</td>
-            <td>${request.registry.settings.get(option)}</td>
-        </tr>
-    % endfor
-
-    <tr>
-        <th colspan="2">
-            Redis Configuration
-        </th>
-    </tr>
-    % for option in ('redis.prime_style', 'redis.url', ):
-        <tr>
-            <td>${option}</td>
-            <td>${request.registry.settings.get(option)}</td>
-        </tr>
-    % endfor
-
-
-    <tr>
-        <th colspan="2">
-            SqlAlchemy Configuration
-        </th>
-    </tr>
-    % for option in ('sqlalchemy.url', ):
-        <tr>
-            <td>${option}</td>
-            <td>${request.registry.settings.get(option)}</td>
-        </tr>
-    % endfor
-</table>
-        
-
+        <div class="col-sm-12">
+            <table class="table table-striped table-condensed">
+                % for section in sorted(documentation_grid.keys()):
+                    <tr>
+                        <th colspan="2">
+                            ${section}
+                        </th>
+                    </tr>
+                    % if '.section_requires' in documentation_grid[section]:
+                        <tr>
+                            <td colspan="2">
+                                This section requires <code>${documentation_grid[section]['.section_requires']}</code>
+                            </td>
+                        </tr>
+                    % endif
+                    % for option in sorted(documentation_grid[section].keys()):
+                        <% if option == '.section_requires': continue %>
+                        <tr>
+                            <th>${option}</th>
+                            <td>
+                                ${documentation_grid[section][option].get('docstring')}
+                                % if documentation_grid[section][option].get('default'):
+                                    <% _default = documentation_grid[section][option].get('default') %>
+                                    <hr/>
+                                    Default: 
+                                    % if _default[0] == '`':
+                                        <code>${_default[1:-1]}</code>
+                                    % else:
+                                        ${_default}
+                                    % endif
+                                % endif
+                            </thd>
+                        </tr>
+                    % endfor
+                    <tr><td colspan="2">&nbsp;</td></tr>
+                % endfor
+            </table>
         </div>
     </div>
 </%block>
