@@ -10,6 +10,7 @@
 - updating some functionality for imports
 - some ux fixes
 - the nginx status tools now return a better json payload
+- adding a settings panel that documents all the config options
 
 0.1.5
 2018.01.15
